--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,9 @@ sky:
     database: sky_take_out
     username: root
     password: 990724
+
+  alioss:
+    access-key-id:
+    bucket-name:
+    access-key-secret:
+    endpoint:
