--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -12,3 +12,9 @@ sky:
     bucket-name:
     access-key-secret:
     endpoint:
+
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 10
